--- a/templates/general_info.html
+++ b/templates/general_info.html
@@ -4,14 +4,13 @@
 {% block content %}
 <div class="container mt-1">
     <h1>Informasi Layanan</h1>
-    <h2 class="mt-5">Search</h2>
     <form method="post">
         {% csrf_token %}
         {% crispy form %}
         <p class="ms-2 mt-3">atau</p>
         
     </form>
-    <a href="https://wa.me/6281130701007?text=" title="click to open whatsapp chat"><button class="btn btn-success">
+    <a href="https://wa.me/6281130701007?text=ktp" title="click to open whatsapp chat"><button class="btn btn-success">
         <i class="fa fa-whatsapp"></i> Klik</button>
     </a>
 
@@ -19,9 +18,9 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>Name</th>
+                    <th>Nama</th>
                     <th>Link</th>
-                    <th>Keyword</th>
+                    <th>Kata Kunci</th>
                 </tr>
             </thead>
             <tbody>
