--- a/templates/aspect_list copy.html
+++ b/templates/aspect_list copy.html
@@ -3,11 +3,11 @@
 
 {% block content %}
 <div class="container">
-    <h1>Daftar Aspek dari {{ survey.title }}</h1>
-    <form method="get">
+    <h1>Daftar Aspek {{ survey.title }}</h1>
+    {% comment %} <form method="get">
         {{ filter.form.as_p }}
         <button type="submit" class="btn btn-primary">Filter</button>
-    </form>
+    </form> {% endcomment %}
     <ul class="list-group">
       {% for aspect in aspects %}
           <li class="list-group-item">
