--- a/templates/aspect_list.html
+++ b/templates/aspect_list.html
@@ -4,10 +4,10 @@
 {% block content %}
 <div class="container">
     <h1>Daftar Aspek dari </h1>
-    <form method="get">
+    {% comment %} <form method="get">
         {{ filter.form }}
         <button type="submit" class="btn btn-primary">Filter</button>
-    </form>
+    </form> {% endcomment %}
     {% render_table table %}
 </div>
 {% endblock %}
