--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,12 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.1.0/lazysizes.min.js" ></script>
-    
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.1.0/lazysizes.min.js"></script>
+
     <style>
       .sidebar {
         min-height: 100vh;
@@ -51,7 +54,8 @@
         margin-left: 15px;
       }
 
-      .header-text h1, .header-text p {
+      .header-text h1,
+      .header-text p {
         margin: 0;
       }
     </style>
@@ -61,15 +65,25 @@
     <nav class="navbar navbar-light bg-light">
       <div class="container-fluid d-flex justify-content-center">
         <div class="d-flex align-items-center">
-          <img src="{% static 'img/logo_right.png' %}" alt="Logo" class="me-3" style="height: 75px;" />
-          
+          <img
+            src="{% static 'img/logo_right.png' %}"
+            alt="Logo"
+            class="me-3"
+            style="height: 75px"
+          />
+
           <!-- Text -->
           <div class="header-text text-center">
             <h1>RUMAH SELPI KOTA PROBOLINGGO</h1>
             <h3>Rumah Akselerasi Kinerja Pelayanan Publik Kota Probolinggo</h3>
           </div>
-          
-          <img src="{% static 'img/logo_left.png' %}" alt="Logo" class="ms-3" style="height: 100px;" />
+
+          <img
+            src="{% static 'img/logo_left.png' %}"
+            alt="Logo"
+            class="ms-3"
+            style="height: 100px"
+          />
         </div>
       </div>
     </nav>
@@ -81,50 +95,86 @@
         <div class="col-md-2 sidebar">
           <ul class="nav flex-column">
             <li class="nav-item">
-              <a href="/dashboard" class="nav-link" style="font-size: 1.5rem;">
+              <a href="/dashboard" class="nav-link" style="font-size: 1.5rem">
                 <i class="fa fa-home"></i> Dashboard
               </a>
             </li>
             <li class="nav-item">
-              <a href="/general_info" class="nav-link" style="font-size: 1.5rem;">
+              <a
+                href="/general_info"
+                class="nav-link"
+                style="font-size: 1.5rem"
+              >
                 <i class="fa fa-info-circle"></i> Informasi Layanan
               </a>
             </li>
             <li class="nav-item">
-              <a href="/discussion" class="nav-link" style="font-size: 1.5rem;">
+              <a href="/discussion" class="nav-link" style="font-size: 1.5rem">
                 <i class="fa fa-comments"></i> Forum Diskusi
               </a>
             </li>
             {% if user.is_authenticated %}
             <li class="nav-item">
-              <a href="/evaluations" class="nav-link" style="font-size: 1.5rem;">
+              {% if user.userprofile.role == 'evaluator' %}
+              <a href="/evaluator" class="nav-link" style="font-size: 1.5rem">
                 <i class="fa fa-list"></i> Berbagi Dokumen dan Evaluasi
               </a>
+              {% elif user.userprofile.role == 'assignee' %}
+              <a href="/evaluations" class="nav-link" style="font-size: 1.5rem">
+                <i class="fa fa-list"></i> Berbagi Dokumen dan Evaluasi
+              </a>
+              {% endif %}
             </li>
             {% else %}
-              <li class="nav-item">
-                <a href="/admin/login/" class="nav-link" style="font-size: 1.5rem;">
-                  <i class="fa fa-list"></i> Login
-                </a>
-              </li>
+            <li class="nav-item">
+              <a
+                href="{% url 'login' %}"
+                class="nav-link"
+                style="font-size: 1.5rem"
+              >
+                <i class="fa fa-list"></i> Login
+              </a>
+            </li>
             {% endif %}
           </ul>
-          
 
           {% if user.is_authenticated %}
           <div class="dropdown mt-auto pb-1">
-            <a href="#" class="d-flex align-items-center text-black text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-              <div class="rounded-circle" style="width: 30px; height: 30px; background-color:#ff7700; color: white; display: flex; align-items: center; justify-content: center;">
+            <a
+              href="#"
+              class="d-flex align-items-center text-black text-decoration-none dropdown-toggle"
+              id="dropdownUser1"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              <div
+                class="rounded-circle"
+                style="
+                  width: 30px;
+                  height: 30px;
+                  background-color: #ff7700;
+                  color: white;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                "
+              >
                 {{ user.username|slice:":1"|upper }}
               </div>
               <span class="d-none d-sm-inline mx-1">{{ user.username }}</span>
             </a>
             <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
-              <li><a class="dropdown-item" href="">Profile</a></li>
+              {% comment %}
               <li>
-                <hr class="dropdown-divider">
+                <a class="dropdown-item" href="{% url 'logout' %}">Sign out</a>
               </li>
-              <li><a class="dropdown-item" href="/admin/logout/">Sign out</a></li>
+              {% endcomment %}
+              <li>
+                <form method="POST" action="{% url 'logout' %}">
+                  {% csrf_token %}
+                  <button type="submit" class="dropdown-item">Sign out</button>
+                </form>
+              </li>
             </ul>
           </div>
           {% endif %}
