--- a/templates/evaluator_form.html
+++ b/templates/evaluator_form.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load main_extras %}
 {% block content %}
 <div class="container mx-auto mt-5">
     <h1 class="text-3xl font-bold mb-4">Evaluasi untuk {{ aspect.name }}</h1>
@@ -46,11 +46,10 @@
                                 </tbody>
                                 </table>
                         </div>
-
                         <div class="option-one-selection-evaluator">
                             {% for option in item.options %}
                             <div class="form-check form-check">
-                                <input class="form-check-input" type="radio" name="question_{{ item.question.id }}" id="option_{{ option.id }}" value="{{ option.score }}">
+                                <input class="form-check-input" type="radio" name="question_{{ item.question.id }}" id="option_{{ option.id }}" value="{{ option.score }}" {% if option.score == response|get_response:item.question.id %}checked{% endif %}>
                                 <label class="form-check-label" for="option_{{ option.id }}">
                                     {{ option.score }}. {{ option.name }}
                                 </label>
@@ -75,7 +74,7 @@
         </div>
         
         <button type="submit" class="btn btn-primary mt-4">Submit</button>
-    </form>
+    
 </div>
 
 {% endblock %}
